# billing

./: .gitignore  Containerfile  README.md  pyproject.toml
.github/wiki/: Home.md
.github/workflows/: ci.yml  init-wiki.yml
billing_service/: __init__.py  access.py  app.py  config.py  customers_client.py  dashboard_analytics.py  dashboard_anomaly.py  nmchain_client.py
billing_service/static/: dashboard.css  dashboard.js
billing_service/templates/: dashboard.html
tests/: test_app.py
