[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralmimicry-billing"
version = "0.1.0"
description = "NeuralMimicry billing service for token balances, settlements, and nmchain-backed ledger operations."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "Flask>=3.0,<4",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[tool.setuptools.packages.find]
include = ["billing_service*"]

[tool.setuptools.package-data]
billing_service = [
  "templates/*.html",
  "static/*.css",
  "static/*.js",
]
